@@ -1,36 +1,7 @@
 AUX junit-3.8.2-build.xml 3176 RMD160 1f224d755db6c5b0c255620b2b33d503078ba3c8 SHA1 43087ed52528088f63b03b1934240a5962931d09 SHA256 827fda6bc6f3f4983ce79fc7f8934ada5163e49966336b15d4a709c26549eeb1
-MD5 a74ea05f4ad4295a7fae9c7e54f5cfe3 files/junit-3.8.2-build.xml 3176
-RMD160 1f224d755db6c5b0c255620b2b33d503078ba3c8 files/junit-3.8.2-build.xml 3176
-SHA256 827fda6bc6f3f4983ce79fc7f8934ada5163e49966336b15d4a709c26549eeb1 files/junit-3.8.2-build.xml 3176
 DIST junit3.8.2.zip 461426 RMD160 c66d64d8aa738460490e62fd332c112076d9b662 SHA1 701578302e244e5173dca3040cce0774a5c39645 SHA256 aae23d20e6f4dc45b4bf0b10fedcbd209c100342a0cafce1aa07d2da6da1f24a
-DIST junit4.1.zip 622205 RMD160 6ef67dae33489624c32c433a222a1a072e7c37fb SHA1 1a1f016b961e502d9c05df8134d19903c0cbebcf SHA256 a66640b14ae6baf186479cc80fb144f3299747526fbf934839a8636d5df36a53
-DIST junit4.2.zip 658193 RMD160 784630c48f86f5c12bb695fc29149f0ac3b5642c SHA1 5cc44edc052778a4393a03053e7459ecd2571bb0 SHA256 8003e878d6e19957ea8c2345dc2e8be4f0ccc0b9cda63c013a9706c895385b38
+DIST junit4.3.1.zip 643042 RMD160 0d47b3531fc054269329301b7990bb1a0860054a SHA1 ec97c2eef7135dc0e94e7ba7a8bf25e311724e55 SHA256 4b5c9c3eb07c53efa036d904a192c93d95445551aef7c6195a87395c6a834f0c
 EBUILD junit-3.8.2-r1.ebuild 983 RMD160 4e762a55a5d9e886473141e1c5813d8596c409b0 SHA1 cc03ac7ac6f5782c4a2e69855e0310af3d9364a3 SHA256 ea6f3a82b7c1a5a3d8bca646d5dfe41ed0402a5922cdbadfa720b9dd578244a8
-MD5 64bc58fb0a86877a3ab9e1a61cdaa7db junit-3.8.2-r1.ebuild 983
-RMD160 4e762a55a5d9e886473141e1c5813d8596c409b0 junit-3.8.2-r1.ebuild 983
-SHA256 ea6f3a82b7c1a5a3d8bca646d5dfe41ed0402a5922cdbadfa720b9dd578244a8 junit-3.8.2-r1.ebuild 983
-EBUILD junit-4.1.ebuild 1790 RMD160 3a91329388b6685ef235c96bab79b97063e18140 SHA1 d8cf1e187240ac27458df02239f4d87a9fb2a540 SHA256 feabd82f94732961c03bd1ce7fda6a651384221f5e01e32af6b33c4a79b090a3
-MD5 e1cd07f1c4f2f63cb5363b0599f0f80c junit-4.1.ebuild 1790
-RMD160 3a91329388b6685ef235c96bab79b97063e18140 junit-4.1.ebuild 1790
-SHA256 feabd82f94732961c03bd1ce7fda6a651384221f5e01e32af6b33c4a79b090a3 junit-4.1.ebuild 1790
-EBUILD junit-4.2.ebuild 2104 RMD160 de935d3ac7b03b9e033e708c0a64d7f89ad1ff51 SHA1 e5c489eb90c160b8250309c7b7296053d081c3f7 SHA256 39fe29ec6fd4d43ad508c264dc4e22ccc97dace644a68a4fed2b731e38d1090f
-MD5 207ddbdcadb1712a744613b55889a543 junit-4.2.ebuild 2104
-RMD160 de935d3ac7b03b9e033e708c0a64d7f89ad1ff51 junit-4.2.ebuild 2104
-SHA256 39fe29ec6fd4d43ad508c264dc4e22ccc97dace644a68a4fed2b731e38d1090f junit-4.2.ebuild 2104
-MISC ChangeLog 5038 RMD160 0cdb116801349dc0324cfc3d4b883fce36e61222 SHA1 dc544642372f13b8d41fa5c79dd3463f78604547 SHA256 add9869b65d8a237cf3001d616409aba1e2a58ffcc7e10ede357ab0a8f3a84a3
-MD5 8fdae033232b4aa65fdf27441146e74e ChangeLog 5038
-RMD160 0cdb116801349dc0324cfc3d4b883fce36e61222 ChangeLog 5038
-SHA256 add9869b65d8a237cf3001d616409aba1e2a58ffcc7e10ede357ab0a8f3a84a3 ChangeLog 5038
+EBUILD junit-4.3.1.ebuild 2856 RMD160 6782212b33c03bfe6638bcb2989639a8032bcdd9 SHA1 49ceee736f7a232dc6e94c8e193baeb79d5172e5 SHA256 a5f7f1da2e0f9cc622390f0486f4f79274ab4f1b82725d728060095c95cf9c34
+MISC ChangeLog 5167 RMD160 e9aab5e484a9dd2bded3c5419c9febcf7f7df5fa SHA1 41f139090058dd4281444c3e153904a5b45f9c82 SHA256 02f0bde1b8b3f1bc1276e58cbdf993199c3bd926b9f46f987da30ff9f80f6aee
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
-RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
-SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
-MD5 20bad8c34272b0d3eca7d68c76f38982 files/digest-junit-3.8.2-r1 223
-RMD160 5b40a50f6c18d4440f831722aaf9d4f1ed8f80ce files/digest-junit-3.8.2-r1 223
-SHA256 51dc8c731634d957e6ba33a2b68e03b483baefdcc9a5605f86662ef829a5df46 files/digest-junit-3.8.2-r1 223
-MD5 37da3b3b1076a1daf5836d2871eceb16 files/digest-junit-4.1 217
-RMD160 a4863ba13658bc91315bc4b55ec84694f95b8dba files/digest-junit-4.1 217
-SHA256 676413ffbe9f5d1d3f42233c1a927f6886893ba8943b554de3221cafb355bb60 files/digest-junit-4.1 217
-MD5 5aec67d504ff945af336169ef848c2f7 files/digest-junit-4.2 217
-RMD160 2a1e2b6900a34ff5ac1ed80e97553d3854f45112 files/digest-junit-4.2 217
-SHA256 4cacb585b8b676d40cb722c619d857f1a4f22925d61c2ca10b1b9a74cb993cdd files/digest-junit-4.2 217
